// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkNudger should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Decrease"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 98, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": null,
          "textAlign": "left",
        },
        Object {
          "fontWeight": "700",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    accessibilityLabel="Increase"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 98, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`iOS BpkNudger should render correctly when value is a not an integer 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Decrease"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(224, 227, 229)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(194, 201, 205)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": null,
          "textAlign": "left",
        },
        Object {
          "fontWeight": "700",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    1
  </Text>
  <View
    accessibilityLabel="Increase"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 98, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`iOS BpkNudger should render correctly when value is greater than max 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Decrease"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 98, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": null,
          "textAlign": "left",
        },
        Object {
          "fontWeight": "700",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    accessibilityLabel="Increase"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(224, 227, 229)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(194, 201, 205)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`iOS BpkNudger should render correctly when value is less than min 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Decrease"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(224, 227, 229)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(194, 201, 205)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": null,
          "textAlign": "left",
        },
        Object {
          "fontWeight": "700",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    accessibilityLabel="Increase"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          null,
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(224, 227, 229)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 6,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 98, 227)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(22, 22, 22)",
            "bottom": 0,
            "flex": 1,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "borderRadius": 40,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
</View>
`;
